# protobrain

./: .gitignore  .gitmodules  README.md  benchmark.py  build.sh  experiment.proto  experiment.py  image.py  main.py  protobuf-compile.sh  pyproject.toml  setup.py
brain/: __version__.py  brain.py  computation.py  event.py  layer.py  minicolumn.py  neocortex.py  neuron.py  neurons.py  sensor.py  synapses.py  synaptic_policy.py
brain/proto/: experiment_pb2.py  snapshot.proto  snapshot_pb2.py
brain/util/: factory.py  sdr.py
protobrain/: __init__.py  __version__.py  brain.py  computation.py  learning.py  neocortex.py  neuron.py  protobrain.py  scientist.py  sensor.py  synapses.py
protobrain/benchmark/: metric.py
protobrain/cli/: experiment.py
protobrain/encoders/: README.md  image.py  numerical.py
protobrain/metrics/: README.md  benchmark.py  metric.py  spike_count.py  spike_density.py
protobrain/proto/: README.md  encoder.proto  experiment.proto  experiment_pb.js  experiment_pb2.py  sdr.proto  snapshot.proto  snapshot_pb.js  snapshot_pb2.py
protobrain/util/: proto_io.py  proto_parse.py  sdr.py
test/: test_brain.py  test_event.py  test_layer.py  test_minicolumn.py  test_neocortex.py  test_neuron.py
test/brain/: conftest.py  test_computation.py  test_event.py  test_neocortex.py  test_neuron.py  test_neurons.py  test_sensor.py  test_synapses.py  test_synaptic_policy.py
test/encoders/: test_numerical.py
test/protobrain/: conftest.py  test_computation.py  test_event.py  test_learning.py  test_neocortex.py  test_neuron.py  (+3 more)
util/: factory.py  sdr.py
(+25 files in other folders)
